--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "axios": "^0.27.2",
+    "concurrently": "^7.1.0",
+    "form-data": "^4.0.0",
+    "jwt-decode": "^3.1.2",
+    "lodash.throttle": "^4.1.1",
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "thunk": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
